--- a/calculadora/src/main/resources/templates/index.html
+++ b/calculadora/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
           
     <form method="POST" action= "/calcular">
        
-            <legend>Calculadora</legend>
+            <legend>Calculadora Lou</legend>
     <div>
         <label for= "numero1"><b>Primeiro valor:</b></label>
         <input type="text" name="numero1" id= "numero1" placeholder="Digite o número"/>
