--- a/calculadoraa/src/main/resources/templates/index.html
+++ b/calculadoraa/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
       
 <form method="POST" action= "/calcular">
    
-        <legend>Calculadora Lou</legend>
+        <legend>Calculadora</legend>
 <div>
     <label for= "numero1"><b>Primeiro valor:</b></label>
     <input type="text" name="numero1" id= "numero1" placeholder="Digite o número"/>
